PreOpenMarket jobs activated now